--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,10 +48,33 @@ dependencies:
 
   # Social Signing scope
   # source: https://firebase.google.com/docs/auth/flutter/federated-auth
+  # source: https://blog.codemagic.io/firebase-authentication-google-sign-in-using-flutter/
   google_sign_in: ^6.1.4
   firebase_auth: ^4.6.3
   flutter_facebook_auth: ^5.0.11
   # Social Signing scope
+
+  # Webview Flutter scope
+  webview_flutter: ^4.2.2
+  # Webview Flutter scope
+
+  # Google Maps scope
+  # source: https://developers.google.com/maps/documentation/android-sdk/get-api-key
+  # source: https://console.cloud.google.com/google/maps-apis/credentials?project=flutter-playground-391704 (ADMIN)
+  # source: https://codelabs.developers.google.com/codelabs/google-maps-in-flutter#4
+  google_maps_flutter: ^2.3.0
+  google_maps_flutter_web: ^0.5.1
+
+  # source: https://pub.dev/packages/location/example
+  # source: https://levelup.gitconnected.com/how-to-add-google-maps-in-a-flutter-app-and-get-the-current-location-of-the-user-dynamically-2172f0be53f6
+  location: ^4.4.0
+
+  geocoding: ^2.1.0
+  # Google Maps scope
+
+  # Permission scope
+  permission_handler: ^10.4.1
+  # Permission scope
 
 dev_dependencies:
   flutter_test:
