--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # Root All Firebase Products scope
+  firebase_core: ^2.14.0
+  # Root All Firebase Products scope
+
   # Firebase Crashlytics scope
   # source: https://firebase.google.com/docs/crashlytics/get-started?platform=flutter
   firebase_crashlytics: ^3.3.3
-  firebase_core: ^2.14.0
   # Firebase Crashlytics scope
 
   # Firebase Analytics scope
@@ -68,13 +71,21 @@ dependencies:
   # source: https://pub.dev/packages/location/example
   # source: https://levelup.gitconnected.com/how-to-add-google-maps-in-a-flutter-app-and-get-the-current-location-of-the-user-dynamically-2172f0be53f6
   location: ^4.4.0
-
   geocoding: ^2.1.0
+
+  # source: https://stackoverflow.com/a/65024566 (ISSUE)
+  # source: https://stackoverflow.com/a/63444978 (ISSUE)
+  flutter_polyline_points: ^1.0.0
   # Google Maps scope
 
   # Permission scope
   permission_handler: ^10.4.1
   # Permission scope
+
+  # Push Notification scope
+  overlay_support: ^2.1.0
+  firebase_messaging: ^14.6.4
+  # Push Notification scope
 
 dev_dependencies:
   flutter_test:
